Fix typeahead value localized bug

--- a/ShoppingStore/Views/Account/Login.cshtml
+++ b/ShoppingStore/Views/Account/Login.cshtml
@@ -2,6 +2,7 @@
 @using System.Linq
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
+@inject IViewLocalizer Localizer
 @model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
@@ -9,12 +10,12 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2>@Localizer["LogIn"]</h2>
 <div class="row">
     <div class="col-md-4">
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4>Use a local account to log in.</h4>
+                <h4>@Localizer["UseLocalAccountLogIn"]</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -36,14 +37,14 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">Log in</button>
+                    <button type="submit" class="btn btn-default">@Localizer["LogIn"]</button>
                 </div>
                 <div class="form-group">
                     <p>
-                        <a asp-action="ForgotPassword">Forgot your password?</a>
+                        <a asp-action="ForgotPassword">@Localizer["ForgotYourPassword"]</a>
                     </p>
                     <p>
-                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
+                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">@Localizer["RegisterNewUser"]</a>
                     </p>
                 </div>
             </form>
