Localized Identity system

--- a/ShoppingStore/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/ShoppingStore/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@inject IViewLocalizer Localizer
+@{
     ViewData["Title"] = "Forgot password confirmation";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2>@Localizer["ForgotPasswordConfirmation"]</h2>
 <p>
-    Please check your email to reset your password.
+    @Localizer["ForgotPasswordConfirmationMessage"]
 </p>
