--- a/ShoppingStore/Views/Manage/EnableAuthenticator.cshtml
+++ b/ShoppingStore/Views/Manage/EnableAuthenticator.cshtml
@@ -1,4 +1,5 @@
 ﻿@model EnableAuthenticatorViewModel
+@inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = "Enable authenticator";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
