--- a/ShoppingStore/Views/Manage/ResetAuthenticator.cshtml
+++ b/ShoppingStore/Views/Manage/ResetAuthenticator.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@inject IViewLocalizer Localizer
+@{
     ViewData["Title"] = "Reset authenticator key";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
 }
