--- a/ShoppingStore/Views/Manage/SetPassword.cshtml
+++ b/ShoppingStore/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,5 @@
 ﻿@model SetPasswordViewModel
+@inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = "Set password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
