--- a/ShoppingStore/Views/Manage/TwoFactorAuthentication.cshtml
+++ b/ShoppingStore/Views/Manage/TwoFactorAuthentication.cshtml
@@ -1,4 +1,5 @@
 @model TwoFactorAuthenticationViewModel
+@inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = "Two-factor authentication";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
