--- a/ShoppingStore/Views/Manage/_ManageNav.cshtml
+++ b/ShoppingStore/Views/Manage/_ManageNav.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ShoppingStore.Views.Manage
 @inject SignInManager<ApplicationUser> SignInManager
+@inject IViewLocalizer Localizer
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
