--- a/ShoppingStore/Views/Account/AccessDenied.cshtml
+++ b/ShoppingStore/Views/Account/AccessDenied.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Access denied";
 }
-
+@inject IViewLocalizer Localizer
 <header>
-    <h2 class="text-danger">ViewData["Title"]</h2>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h2 class="text-danger">@Localizer["AccessDenied"]]</h2>
+    <p class="text-danger">@Localizer["AccessDeniedMessage"]</p>
 </header>
