--- a/ShoppingStore/Views/Account/ExternalLogin.cshtml
+++ b/ShoppingStore/Views/Account/ExternalLogin.cshtml
@@ -1,16 +1,13 @@
 ﻿@model ExternalLoginViewModel
-@{
-    ViewData["Title"] = "Register";
-}
+@inject IViewLocalizer Localizer
 
-<h2>@ViewData["Title"]</h2>
-<h4>Associate your @ViewData["LoginProvider"] account.</h4>
+<h2>@Localizer["Register"]</h2>
+<h4>@Localizer["AssociateYour"] @ViewData["LoginProvider"] @Localizer["account"].</h4>
 <hr />
 
 <p class="text-info">
-    You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
+    @Localizer["YouSuccessfullyAuthenticatedWith"] <strong>@ViewData["LoginProvider"]</strong>.
+    @Localizer["EnterEmailLinkMessage"]
 </p>
 
 <div class="row">
@@ -22,7 +19,7 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Register</button>
+            <button type="submit" class="btn btn-default">@Localizer["Register"]</button>
         </form>
     </div>
 </div>
