--- a/ShoppingStore/Views/Account/Lockout.cshtml
+++ b/ShoppingStore/Views/Account/Lockout.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@inject IViewLocalizer Localizer
+@{
     ViewData["Title"] = "Locked out";
 }
 
 <header>
-    <h2 class="text-danger">@ViewData["Title"]</h2>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <h2 class="text-danger>@Localizer["LockedOut"]</h2>
+    <p class="text-danger">@Localizer["LockedOutMessage"]</p>
 </header>
