--- a/ShoppingStore/Views/Account/LoginWith2fa.cshtml
+++ b/ShoppingStore/Views/Account/LoginWith2fa.cshtml
@@ -1,11 +1,10 @@
 ﻿@model LoginWith2faViewModel
-@{
-    ViewData["Title"] = "Two-factor authentication";
-}
+@inject IViewLocalizer Localizer
 
-<h2>@ViewData["Title"]</h2>
+
+<h2>@Localizer["TwoFactorAuthentication"]</h2>
 <hr />
-<p>Your login is protected with an authenticator app. Enter your authenticator code below.</p>
+<p>@Localizer["TwoFactorAuthenticationMessage"]</p>
 <div class="row">
     <div class="col-md-4">
         <form method="post" asp-route-returnUrl="@ViewData["ReturnUrl"]">
@@ -25,14 +24,14 @@
                 </div>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-default">Log in</button>
+                <button type="submit" class="btn btn-default">@Localizer["LogIn"].</button>
             </div>
         </form>
     </div>
 </div>
 <p>
-    Don't have access to your authenticator device? You can 
-    <a asp-action="LoginWithRecoveryCode" asp-route-returnUrl="@ViewData["ReturnUrl"]">log in with a recovery code</a>.
+   @Localizer["DoNotHaveAccessDivice"] 
+    <a asp-action="LoginWithRecoveryCode" asp-route-returnUrl="@ViewData["ReturnUrl"]">@Localizer["LogInWithRecoveryCode"]</a>.
 </p>
 
 @section Scripts {
