--- a/ShoppingStore/Views/Account/LoginWithRecoveryCode.cshtml
+++ b/ShoppingStore/Views/Account/LoginWithRecoveryCode.cshtml
@@ -1,13 +1,13 @@
 ﻿@model LoginWithRecoveryCodeViewModel
+@inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = "Recovery code verification";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2>@Localizer["RecoveryCodeVerification"]</h2>
 <hr />
 <p>
-    You have requested to login with a recovery code. This login will not be remembered until you provide
-    an authenticator app code at login or disable 2FA and login again.
+    @Localizer["RecoveryCodeVerificationMessage"]
 </p>
 <div class="row">
     <div class="col-md-4">
@@ -18,7 +18,7 @@
                 <input asp-for="RecoveryCode" class="form-control" autocomplete="off" />
                 <span asp-validation-for="RecoveryCode" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Log in</button>
+            <button type="submit" class="btn btn-default">@Localizer["LogIn"]</button>
         </form>
     </div>
 </div>
