--- a/ShoppingStore/Views/Account/ResetPassword.cshtml
+++ b/ShoppingStore/Views/Account/ResetPassword.cshtml
@@ -1,10 +1,11 @@
 ﻿@model ResetPasswordViewModel
+@inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = "Reset password";
 }
 
-<h2>@ViewData["Title"]</h2>
-<h4>Reset your password.</h4>
+<h2>@Localizer["ResetPassword"]</h2>
+<h4>@Localizer["ResetPasswordMessage"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -26,7 +27,7 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Reset</button>
+            <button type="submit" class="btn btn-default">@Localizer["Reset"]</button>
         </form>
     </div>
 </div>
