--- a/ShoppingStore/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/ShoppingStore/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@inject IViewLocalizer Localizer
+@{
     ViewData["Title"] = "Reset password confirmation";
 }
 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Your password has been reset. Please <a asp-action="Login">click here to log in</a>.
+    @Localizer["YourPasswordResetMessage"] <a asp-action="Login">@Localizer["ClickLogInMessage"]</a>.
 </p>
