--- a/ShoppingStore/Views/Account/SignedOut.cshtml
+++ b/ShoppingStore/Views/Account/SignedOut.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@inject IViewLocalizer Localizer
+@{
     ViewData["Title"] = "Signed out";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2>@Localizer["SignedOut"]</h2>
 <p>
-    You have successfully signed out.
+    @Localizer["SignedOutMessage"].
 </p>
