--- a/ShoppingStore/Views/Manage/ChangePassword.cshtml
+++ b/ShoppingStore/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ChangePasswordViewModel
+@inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = "Change password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
