--- a/ShoppingStore/Views/Manage/Disable2fa.cshtml
+++ b/ShoppingStore/Views/Manage/Disable2fa.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@inject IViewLocalizer Localizer
+@{
     ViewData["Title"] = "Disable two-factor authentication (2FA)";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
 }
