--- a/ShoppingStore/Views/Manage/ExternalLogins.cshtml
+++ b/ShoppingStore/Views/Manage/ExternalLogins.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ExternalLoginsViewModel
+@inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = "Manage your external logins";
     ViewData.AddActivePage(ManageNavPages.ExternalLogins);
