--- a/ShoppingStore/Views/Manage/GenerateRecoveryCodes.cshtml
+++ b/ShoppingStore/Views/Manage/GenerateRecoveryCodes.cshtml
@@ -1,4 +1,5 @@
 ﻿@model GenerateRecoveryCodesViewModel
+@inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
