--- a/ShoppingStore/Views/Manage/Index.cshtml
+++ b/ShoppingStore/Views/Manage/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IndexViewModel
+@inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = "Profile";
     ViewData.AddActivePage(ManageNavPages.Index);
