--- a/ShoppingStore/Views/Localization/Index.cshtml
+++ b/ShoppingStore/Views/Localization/Index.cshtml
@@ -235,7 +235,7 @@
                     onClickAfter: function (node, a, item, event) {
                         event.preventDefault();
 
-                        var text = "@Localizer["Keyword"]: " + "\""+item.display+"\"";
+                        var text = "@Localizer["FindOne"] @Localizer["Keyword"]: " + "\""+item.display+"\"";
                         $('#result-container').html(text);
 
                     },
