--- a/ShoppingStore/Views/Shared/_LoginPartial.cshtml
+++ b/ShoppingStore/Views/Shared/_LoginPartial.cshtml
@@ -3,6 +3,7 @@
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@inject IViewLocalizer Localizer
 
 @if (SignInManager.IsSignedIn(User))
 {
@@ -12,7 +13,7 @@
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">@Localizer["LogOut"]</button>
             </li>
         </ul>
     </form>
@@ -20,7 +21,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-        <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Register">@Localizer["Register"]</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Login">@Localizer["LogIn"]</a></li>
     </ul>
 }
