--- a/ShoppingStore/Views/Home/Index.cshtml
+++ b/ShoppingStore/Views/Home/Index.cshtml
@@ -2,16 +2,27 @@
 
 <link rel="stylesheet" href="~/css/shop-homepage.css" />
 
-<div class="row">
-    <div class="col-md-3">
-        <p class="lead">Shop Name</p>
-        <div class="list-group">
-            <a href="#" class="list-group-item">Category 1</a>
-            <a href="#" class="list-group-item">Category 2</a>
-            <a href="#" class="list-group-item">Category 3</a>
+
+<br />
+<var id="result-container" class="result-container"></var>
+<form method="get">
+    <div class="typeahead__container">
+        <div class="typeahead__field">
+            <span class="typeahead__query">
+                <input class="search-typeahead" name="searchItem" type="search" placeholder="Search" autocomplete="on">
+            </span>
+            <span class="input-group-btn">
+                <button type="submit" class="btn btn-danger">
+                    <i class="typeahead__search-icon"></i>
+                </button>
+            </span>
         </div>
     </div>
-    <div class="col-md-9">
+</form>
+<br />
+
+<div class="row">
+   
         <div class="row carousel-holder">
             <div class="col-md-12">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -160,4 +171,3 @@
             </div>
         </div>
     </div>
-</div>
