--- a/ShoppingStore/Views/Product/Index.cshtml
+++ b/ShoppingStore/Views/Product/Index.cshtml
@@ -58,24 +58,52 @@
 <div class="modal fade" id="addNewProductModal" tabindex="-1" role="dialog" aria-labelledby="newProductModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h3 class="modal-title" id="newProductModalLabel">@Localizer["AddNewProduct"]</h3>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form id="addProductForm" asp-antiforgery="true" generic form-model="@Model.Product"
-                      attrs-tag="{
-                        input:{class:'form-control'}
-                      }">
-                    <br />
-                    <div class="modal-footer">
-                        <button id="addProductCancel" type="button" class="btn btn-secondary" data-dismiss="modal">@Localizer["Cancel"]</button>
-                        <button type="submit" class="btn btn-primary">@Localizer["Submit"]</button>
+
+            <ul class="nav nav-tabs">
+                <li class="active"><a href="#addProduct" data-toggle="tab">@Localizer["AddNewProduct"]</a></li>
+                <li><a href="#addPhoto" data-toggle="tab">Add Photo</a></li>
+            </ul>
+
+            <div class="tab-content">
+                <div class="tab-pane active" id="addProduct">
+                    <div class="modal-header">
+                        <h3 class="modal-title" id="newProductModalLabel">@Localizer["AddNewProduct"]</h3>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
-                </form>
+                    <div class="modal-body">
+
+                    </div>
+                </div>
+
+                <div class="tab-pane" id="addPhoto">
+                    <div class="modal-header">
+                        <h3 class="modal-title" id="newProductModalLabel">Upload Photo</h3>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form method="post" enctype="multipart/form-data" asp-controller="UploadFiles" asp-action="Index">
+                            <div class="form-group">
+                                <label asp-for="@Model.Photo.FileName"></label>
+                                <input asp-for="@Model.Photo.FileName" class="form-control" />
+                                <span asp-validation-for="@Model.Photo.FileName"></span>
+                            </div>
+                            <div class="form-group">
+                                <p>Upload one or more files using this form:</p>
+                                <input type="file" name="files" multiple />
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Upload" />
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
             </div>
+
         </div>
     </div>
 </div>
