--- a/ShoppingStore/Views/_ViewImports.cshtml
+++ b/ShoppingStore/Views/_ViewImports.cshtml
@@ -5,6 +5,8 @@
 @using ShoppingStore.Models.AccountViewModels
 @using ShoppingStore.Models.ManageViewModels
 @using ShoppingStore.Models.ProductViewModels
+@using ShoppingStore.Models.PhotoViewModels
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *,GenericTagHelper
