--- a/ShoppingStore/Views/Shared/_Layout.cshtml
+++ b/ShoppingStore/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="~/lib/x-editable/dist/bootstrap-editable/css/bootstrap-editable.css" />
         <link rel="stylesheet" href="~/lib/dropzone/dist/dropzone.css" />
         <link rel="stylesheet" href="~/lib/image-picker/image-picker/image-picker.css" />
+        <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
