--- a/ShoppingStore/Views/_ViewImports.cshtml
+++ b/ShoppingStore/Views/_ViewImports.cshtml
@@ -6,6 +6,8 @@
 @using ShoppingStore.Models.ManageViewModels
 @using ShoppingStore.Models.ProductViewModels
 @using ShoppingStore.Models.PhotoViewModels
+@using ShoppingStore.Models.CartViewModels
+@using ShoppingStore.Infrastructure.Extensions
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
