--- a/ShoppingStore/Views/Shared/_Layout.cshtml
+++ b/ShoppingStore/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">@Localizer["ShoppingStore"]</a>
+
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -44,6 +45,9 @@
                     <li><a asp-controller="Product" asp-action="Index">@Localizer["Products"]</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
+                <div class="pull-right">
+                    @await Component.InvokeAsync("CartSummary")
+                </div>
             </div>
         </div>
     </nav>
