--- a/ShoppingStore/Views/Cart/Index.cshtml
+++ b/ShoppingStore/Views/Cart/Index.cshtml
@@ -75,11 +75,13 @@
             <td class="text-right">
                 @Model.Cart.ComputeTotalValue(currentCulture).ToString("c")
             </td>
-
         </tr>
     </tfoot>
 </table>
 
 <div class="text-center">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue shopping</a>
+    <a class="btn btn-primary" asp-action="Checkout" asp-controller="Order">
+        Checkout
+    </a>
 </div>
